fix-align-left-bozes

--- a/static/css/style.blue.css
+++ b/static/css/style.blue.css
@@ -1798,6 +1798,7 @@ fieldset[disabled] .btn-template-primary.active {
   vertical-align: top;
   min-height: 450px;
   padding: 10px;
+  text-align: left;
 }
 
 .content-section strong {
